wwwroot/css/stylesheet.css
html {
    height: 100%
}

body {
    height: 100%;
    min-height: 100%;
    background-image: url("https://hdwallpaperim.com/wp-content/uploads/2017/09/17/62556-restaurant-cafes-urban-city.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

.footer {
    margin-bottom: 0;
    width: 100%;
    font-size: 18px;
    text-align: center;
    color: white;
    height: 60px;
    line-height: 60px;
    background-color: #fc8c03;

    position: fixed;
    bottom: 0;
}

    .footer a {
        color: white;
        -webkit-transition: color 0.5s;
        transition: color 0.5s;
    }

        .footer a:hover {
            color: #b33e00;
        }

h2 {
    color: white;
    text-shadow: 1px 1px 2px #000000;
    font-size: 72px;
    font-family: 'Segoe UI';
    text-align: center;
    font-weight: bold;
    margin-top: 50px;
}

h3 {
    color: white;
    font-size: 40px;
    text-align: center;
    padding-top: 40px;
}

p {
    color: white;
    font-size: 16px;
    font-family: 'Segoe UI Light';
    text-align: center;
}


.description {
    font-size: 32px;
    color: white;
    text-align: center;
    font-weight: normal;
}

.navbar-custom {
    background-color: #fc8c03;    
}

.sidenav-rounded {
    border-radius: 0px 0px 50px 0px;
}

#page-wrapper {
    width: 70%;
    height: 100%;
    margin: 0 auto;
    margin-top: 55px;
    /*position: relative;*/
    overflow: scroll;
    margin-bottom: 100px;
    padding-bottom: 10px;
}

#page-content {
    width: 100%;
    height: 100%;
    margin-bottom: 60px;
    padding-bottom: 60px;
}

.nav-container {
    width: 200px;
    height: 200px;
    position: fixed;
}

#sidenav {
    transform: translateX(-100%);
    transition: 0.3s;
    /*width: 200px;*/
    position: fixed;
    margin: 0;
    padding: 0;
}

    .nav-container:hover #sidenav {
        width: 200px;
        transform: translateX(0);
    }

#sidenav a:hover, #topnav .nav-link:hover {
    background-color: #f7a745;
    color: white;
    border-radius: 25px;
    width: 105%;
}

nav ul li {
    text-align: center;
}

.active {
    background-color: #cf7100;
    border-radius: 25px;
}

.search-field {
    width: 130px;
    padding: 8px;
    border-radius: 15px;
    border: none;
    padding: 8px;
    outline: none;
    -webkit-transition: width 0.2s ease-in-out;
    transition: width 0.2s ease-in-out;
}

.search-field:focus {
    width: 50%;
}

#cancellation-search {
    text-align: center;
    width: 100%;
}

.site-button {
    border: none;
    background-color: #fc8c03;
    color: white;
    padding: 8px;
    border-radius: 15px;
    border: none;
}

    .site-button:hover {
        background-color: #ffb459;
    }

/*#refresh-button {
    float: right;
}*/

#refreshSection {
    text-align: right;
    font-family: 'Segoe UI';
    padding-right: 80px;
}

#modify-opening-times {
    font-family: 'Segoe UI';
}

#customer-info {
    width: 100%;
    text-align: center;
}

#customer-info-edit {
    width: 100%;
    text-align: center;
}

.transparent-bg {
    background-color: rgba(42, 42, 42, 0.5);
}

.bottom-margin { 
    margin-bottom: 100px;
}

.bottom-padding {
    padding-bottom: 20px;
}

table {
    margin: 0 auto;
    color: black;
    border-collapse: collapse;
    padding-bottom: 300px;
    width: 50%;
    background-color: white;
}

    table td {
        border: 2px solid orange;
    }

    table th {
        border: 2px solid orange;
        background-color: #ffdaa3;
    }

table #cancelbutton {
    text-align: center;
    vertical-align: middle;
}

#bookingslist {
    margin: 0 auto;
    height: 100%;
    width: 100%;
}

label {
    color: white;
}

.form-input {
    width: 30%;
}

